# IMPOPk

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  METHODOLOGY.md  Makefile  QA_REPORT.md  README.md  STRUCTURE.md  TESTING_GUIDE.md
IBDnetwork/: generate_toys.py  ibd.py  run_pairwise_impg.sh  vertex_map.csv
data/: README.md  raw-sequencing-data.tsv  sample_list.txt
docs/: API.md  PORTING.md  README.md  tutorials.html
experiments/: README.md
impg/: Cargo.toml  HPRCv2_AFRsubset.txt  HPRCv2_CSAsubset.txt  HPRCv2_EURsubset.txt  IBS.txt  ibd.sh  ibs.sh  ibs_example.txt  main.rs  run_full.sh
legacy/: CHANGELOG.md  README.md  requirements.txt
paper/: HPRCv2_IBD_paper.tex  abstract.tex  discussion.tex  introduction.tex  methods_ancestry.tex  methods_ibd.tex  methods_ibs.tex  methods_validation.tex  references.bib  related_work.tex  results.tex  supplementary.tex
production/ibs-cli/: Cargo.toml  README.md
production/ibs-cli/data/: HPRC_r2_assemblies_0.6.1.agc  hprc465vschm13.aln.paf.gz.impg
production/ibs-cli/examples/: ibs_both_haps.out
production/ibs-cli/experiments/: README.md
production/ibs-cli/experiments/analysis/: ibs_analysis.py
production/ibs-cli/experiments/analysis/output/: ibs_metrics.tsv
production/ibs-cli/experiments/data/: AFR_4samples.txt  CSA_4samples.txt  EAS_4samples.txt  EUR_4samples.txt
production/ibs-cli/experiments/scripts/: analyze_ibs.py  create_subset_lists.sh  generate_final_report.sh  run_all_inter.sh  run_experiment.sh
production/ibs-cli/sample_lists/: HPRCv2_AMRsubset.txt
production/ibs-cli/scripts/: ibd.sh  ibs.sh  jacquard_coeffs.sh  run_full.sh
production/ibs-cli/src/: hmm.rs  lib.rs  main.rs  segment.rs  stats.rs
production/ibs-cli/tests/: parity.rs
reports/: README.md
sample_lists/: HPRCv2_AFR_full.txt  HPRCv2_EASsubset.txt  ibs_example2.txt
scripts/: checksums.sha256  download_all.sh  download_genetic_maps.sh  download_hprc.sh  download_platinum.sh  download_reference.sh  download_vcf.sh  generate_sample_lists.sh  generate_synthetic_ibd_example.py  generate_synthetic_pedigree_example.py  kinship_from_ibd.py  verify_checksums.sh
src/: README.md
src/argraph-cli/: Cargo.toml
src/argraph-cli/src/: bubble.rs  classify.rs  gfa.rs  lib.rs  main.rs  site.rs
src/argraph-cli/tests/: example_region.rs  properties.rs
src/ibs-cli/: Cargo.toml
src/ibs-cli/scripts/: ibs_parallel.sh
src/ibs-cli/src/: lib.rs  main.rs  paf.rs  spatial_index.rs
src/ibs-cli/tests/: cli.rs  cycle87_paf_parsing_edge_tests.rs  paf_io_and_edge_tests.rs  parallel_paf_tests.rs
test/: afr_subset.txt  all_subset.txt  amr_subset.txt  ancestry_auto_25_30.tsv  ancestry_chr12.tsv  ancestry_demo_paf.tsv  ancestry_genmap.tsv  ancestry_loaded_params.tsv  ancestry_mini_output.tsv  ancestry_out.bed  ancestry_pairwise_explicit.tsv  ancestry_posterior_dec.tsv  ancestry_twopass.tsv  demographics_paf.tsv  eur_subset.txt  ibd_bridged.tsv  ibd_composite.tsv  ibd_distance.tsv  ibd_impg_5Mb.tsv  ibd_live_paf.bed  (+18 more)
(+168 files in other folders)
