[package]
name = "hprc-ibd"
version = "0.2.0"
edition = "2021"
authors = ["Franco Caramia"]
description = "IBS and IBD detection tools for HPRC pangenome data"
license = "MIT"
keywords = ["bioinformatics", "pangenome", "IBD", "IBS", "HPRC"]
categories = ["science", "command-line-utilities"]

[lib]
name = "hprc_ibd"
path = "src/lib.rs"

[[bin]]
name = "ibs"
path = "src/main.rs"

[[bin]]
name = "jacquard"
path = "src/bin/jacquard.rs"

[[bin]]
name = "ibd"
path = "src/bin/ibd.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
rayon = "1.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
toml = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
