[package]
name = "hprc-ibs"
version = "0.2.0"
edition = "2021"
authors = ["Franco Marsico"]
description = "IBS (Identity-By-State) detection for HPRC pangenome data"
license = "MIT"
keywords = ["bioinformatics", "pangenome", "IBS", "HPRC"]
categories = ["science", "command-line-utilities"]

[lib]
name = "hprc_ibs"
path = "src/lib.rs"

[[bin]]
name = "ibs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
rayon = "1.8"
hprc-common = { path = "../common" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
